# ChangeLog for sys-fs/loop-aes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.61 2010/10/24 20:38:15 c1pher Exp $

  24 Oct 2010; Dane Smith <c1pher@gentoo.org> loop-aes-3.4b.ebuild:
  QA Fixes in 3.4b.

*loop-aes-3.4b (24 Oct 2010)

  24 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -loop-aes-3.2h.ebuild, -loop-aes-3.3a.ebuild, +loop-aes-3.4b.ebuild:
  Version bump (bug #338431).

  18 Sep 2010; Raúl Porcel <armin76@gentoo.org> loop-aes-3.4a.ebuild:
  arm stable wrt #331239

  06 Aug 2010; Christian Faulhammer <fauli@gentoo.org> loop-aes-3.4a.ebuild:
  stable x86, bug 331239

  05 Aug 2010; Markos Chandras <hwoarang@gentoo.org> loop-aes-3.4a.ebuild:
  Apply patch from Dane Smith <smithdanea@gmail.com> to fix jobserver. Bug
  #331367 and marked stable for amd64 wrt bug #331239

  10 Jul 2010; Christian Faulhammer <fauli@gentoo.org> loop-aes-3.3a.ebuild:
  stable x86, bug 326817

  04 Jul 2010; Markos Chandras <hwoarang@gentoo.org> loop-aes-3.3a.ebuild:
  Stable on amd64 wrt bug #326817

*loop-aes-3.4a (04 Jul 2010)

  04 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +loop-aes-3.4a.ebuild:
  Version bump.

  06 Jun 2010; Raúl Porcel <armin76@gentoo.org> loop-aes-3.2h.ebuild:
  arm stable wrt #301099

*loop-aes-3.3a (03 Jun 2010)

  03 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -loop-aes-3.2g.ebuild, +loop-aes-3.3a.ebuild:
  Version bump (bug #320639).

  23 Jan 2010; Raúl Porcel <armin76@gentoo.org> loop-aes-3.2g.ebuild,
  loop-aes-3.2h.ebuild:
  Add ~arm wrt #301099

  19 Jan 2010; Christian Faulhammer <fauli@gentoo.org> loop-aes-3.2h.ebuild:
  stable x86, bug 300708

  12 Jan 2010; <hwoarang@gentoo.org> loop-aes-3.2h.ebuild:
  Stable on amd64 wrt bug #300708

  25 Dec 2009; Raúl Porcel <armin76@gentoo.org> loop-aes-3.2g.ebuild,
  loop-aes-3.2h.ebuild:
  Add ~sparc wrt #277776
