@@ -1,6 +1,8 @@
 DIST loop-AES-v3.4a.tar.bz2 258414 RMD160 78c1357804a24a563674a4cffc9894451ae33e04 SHA1 e04b1cf2d9a34342743c3e08ad33ebaa518fc808 SHA256 47b225d31fc7b29e6450986cf9c4dd0963a6bc59527cf07b146462964ee2e9b0
 DIST loop-AES-v3.4b.tar.bz2 267790 RMD160 b08ee8e3dc620983af366d1dd9d14fd6a2d3c693 SHA1 34954621d8bfa77bcf20837b9667dcc7cbb5d731 SHA256 4cca26a8f2998da19cb7c8565ddebf728830f8be1d8c68047e63e015c02a930b
+DIST loop-AES-v3.5b.tar.bz2 329087 RMD160 3af5822f1adea54189190e9f6b6650bcba760635 SHA1 a13d4b81ef016dc0e5d8e6e509c3ba743afd03ea SHA256 2f3983fdd45a627b3e4e9157846192c04ac90447810e09d7a3de2c8055a368c7
 EBUILD loop-aes-3.4a.ebuild 1675 RMD160 cef6388c1728be3e0e2a29084706b1405cc28628 SHA1 06cfd14f1a61ded661a18f7fb3fb1ba4e66f464c SHA256 593415c483427b1851fc6edf0c0a02ca0ce792de20b5febbfa25f6139a98a9cd
 EBUILD loop-aes-3.4b.ebuild 1713 RMD160 80e3226ae6e0213a90dc4be27b9c855fb4f50085 SHA1 ccf4bce158d0d7b9c6dae4e4fe13348f3207ff2d SHA256 e03a25847d30b8c1cdf664c95ddeeafb811ebd18ed3efb8f64265f62507a0819
-MISC ChangeLog 8393 RMD160 72ca786ee8160cce94dda86f48aa53ed305361a0 SHA1 6eeda99b3a1467e980ca6b6e0b12b8d19acf3c01 SHA256 95feec7de5e132b74a4c2b2b7dbb2779bf35724b57a60709120860bef2433956
+EBUILD loop-aes-3.5b.ebuild 1757 RMD160 4cacedda4722180ecf683e14dc2117cf1d4bf4b3 SHA1 084d3530c720eb270497755aa43553c39caa2c6d SHA256 07eb18818cc7931d1808242c2cbe2ecca0fe8574a62b7e2492f0ca0653b54779
+MISC ChangeLog 8540 RMD160 19544a0e6519d75e8a78c0c0bc6602626ec41740 SHA1 4bcf04ffda68e777270aa704536d000095fbbe50 SHA256 ef25aaf8b9b93366e94f33e40ff4cd627e7683a9a01fd160f04f11a145cfc4e1
 MISC metadata.xml 461 RMD160 5c7cf2ea64a6e0c4519fbb596872b1feb6583143 SHA1 a0d63932ae4f7a3b7f61f6f4ad401e001f50badb SHA256 d7e451c7fb45124d41ed1949ba055aa798f4b54fe79a800a8406e0f82dde246b
