@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/loop-aes
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.61 2010/10/24 20:38:15 c1pher Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.62 2010/11/29 08:21:49 arfrever Exp $
+
+*loop-aes-3.5b (29 Nov 2010)
+
+  29 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +loop-aes-3.5b.ebuild:
+  Version bump.
 
   24 Oct 2010; Dane Smith <c1pher@gentoo.org> loop-aes-3.4b.ebuild:
   QA Fixes in 3.4b.
